@@ -13,7 +13,7 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
- o 
+ o progress meter percentage and transfer time estimates fixes
 
 This release includes the following known bugs:
 
